# BinaryOptionsTools-v2

./: .gitignore  README.md
.github/workflows/: CI.yml  JsPublish.yml  JsPublishNoFkingLinux.yml
BinaryOptionsTools/: pyproject.toml
BinaryOptionsTools/python/BinaryOptionsTools/: asyncronous.py  syncronous.py  test.py
BinaryOptionsTools/src/: error.rs
BinaryOptionsToolsJs/: Cargo.toml  index.d.ts  index.js  package.json
BinaryOptionsToolsJs/.github/workflows/: CI.yml
BinaryOptionsToolsJs/__test__/: index.spec.mjs
BinaryOptionsToolsJs/npm/android-arm-eabi/: README.md  package.json
BinaryOptionsToolsJs/npm/android-arm64/: README.md  package.json
BinaryOptionsToolsJs/npm/darwin-arm64/: README.md  package.json
BinaryOptionsToolsJs/npm/darwin-universal/: README.md  package.json
BinaryOptionsToolsJs/npm/darwin-x64/: README.md  package.json
BinaryOptionsToolsJs/npm/freebsd-x64/: README.md  package.json
BinaryOptionsToolsJs/npm/linux-arm-gnueabihf/: README.md  package.json
BinaryOptionsToolsJs/npm/linux-arm-musleabihf/: README.md  package.json
BinaryOptionsToolsJs/npm/linux-arm64-gnu/: README.md  package.json
BinaryOptionsToolsJs/src/: error.rs  lib.rs  logs.rs  pocketoption.rs  validator.rs
BinaryOptionsToolsV2/: Cargo.toml  Readme.md  candles_eurusd_otc.csv  pyproject.toml  test.py
BinaryOptionsToolsV2/BinaryOptionsToolsV2/: __init__.py  asyncronous.py  syncronous.py  test_sync.py
BinaryOptionsToolsV2/src/: error.rs  lib.rs  logs.rs  pocketoption.rs  runtime.rs  validator.rs
BinaryOptionsToolsV2/tests/: test.py  test_sync.py
Python/: day_trading_ai_with_pocket_option.py
core/: Cargo.toml  readme.md
core/macros/: Cargo.toml
core/macros/src/: lib.rs  timeout.rs
core/src/: contstants.rs  error.rs  lib.rs
core/src/general/: client.rs  mod.rs  send.rs  stream.rs  traits.rs  types.rs
core/src/pocketoption/: error.rs  mod.rs  pocket_client.rs  validators.rs
core/src/pocketoption/parser/: basic.rs  message.rs
core/src/pocketoption/types/: base.rs  callback.rs  data.rs  data_v2.rs  info.rs  mod.rs  order.rs  streams.rs  success.rs  update.rs  user.rs
core/src/pocketoption/utils/: basic.rs  location.rs  mod.rs
core/src/pocketoption/ws/: api.rs  basic.rs  connect.rs  listener.rs  mod.rs  regions.rs  ssid.rs  stream.rs
core/src/utils/: time.rs  tracing.rs
core/tests/: data.txt  update_history_new.txt
crates/binary_options_tools/: Cargo.toml
crates/core/: Cargo.toml  readme.md
crates/core/src/: constants.rs  error.rs  lib.rs  reimports.rs
crates/core/src/general/: client.rs  config.rs  mod.rs  send.rs  stream.rs  traits.rs  types.rs  validate.rs
crates/core/src/utils/: tracing.rs
crates/macros/: Cargo.toml
crates/macros/src/: config.rs  deserialize.rs  lib.rs  serialize.rs  timeout.rs
docker/android/: Dockerfile
docker/linux/: Dockerfile
examples/javascript/: check_win.js  create_raw_iterator.js  create_raw_order.js  get_balance.js  get_candles.js  get_deal_end_time.js  history.js  logs.js  payout.js  raw_send.js  stream.js  stream_chunked.js  validator.js
rust/: Cargo.toml
rust/src/: lib.rs
(+53 files in other folders)
