[package]
name = "binary-option-tools-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
async-trait = "0.1.83"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
native-tls = "0.2.12"
php_serde = "0.6.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["macros", "io-util", "rt", "sync"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
