[package]
name = "binary_options_tools"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
readme = "../README.md"
description = "A simple asyncronous crate to place trades and get real time data for the Pocket Option trading platform."
license = "MIT"

[dependencies]
binary-option-tools-core = { path = "../core", version = "0.1.1"}