[package]
name = "macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.95"
proc-macro2 = "1.0.93"
quote = "1.0.38"
serde_json = "1.0.136"
syn = "2.0.96"
tokio = { version = "1.43.0", default-features = false, features = ["macros"]}
tracing = "0.1.41"

[dev-dependencies]
serde = "1.0.217"
