[package]
name = "binary-options-tools-core"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/ChipaDevTeam/BinaryOptionsTools-v2"
readme = "README.md"
description = "The core of the `binary-options-tools` crate and the python library `BinaryOptionsToolsV2`."
license = "MIT"

[dependencies]
anyhow = "1.0.95"
async-channel = "2.3.1"
async-trait = "0.1.85"
chrono = { version = "0.4.39", features = ["serde"] }
futures-util = "0.3.31"
php_serde = "0.6.0"
pin-project-lite = "0.2.16"
rand = "0.8.5"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = [] }
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["macros", "io-util", "rt", "sync"] }
tokio-tungstenite = { version = "0.26.1", features = ["native-tls"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
uuid = { version = "1.12.1", features = ["serde"] }

binary-options-tools-macros = { path = "../macros", version = "0.1.0"}